feat: Checkpoint db seeding and logic
